# cordum

./: .coverage.core.out  .coverage.out  .dockerignore  .env.example  .gitattributes  .gitignore  .lycheeignore  ADOPTERS.md  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMANDS.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  Dockerfile.localcap  GOVERNANCE.md  LICENSE  Makefile  NOTICE  README.md  ROADMAP.md  Readme.md  SECURITY.md  SUPPORT.md  TESTING.md  VERSIONING.md  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.enterprise.override.yml  docker-compose.ha.yaml  docker-compose.porttest.yml  docker-compose.release.yml  docker-compose.yml  go.mod  go.sum  j1.json  j2.json  (+12 more)
sdk/conformance/harness/python/: pyproject.toml
sdk/conformance/harness/python/conformance/: __init__.py  __main__.py  _diff.py  _operation_map.py  _report.py  diff_cli.py  driver.py
sdk/conformance/harness/python/tests/: test_diff.py
sdk/python/: .gitignore  CHANGELOG.md  README.md  RELEASING.md  mypy.ini  openapi-python-client.config.yaml  pyproject.toml  ruff.toml
sdk/python/docs/: quickstart.md
sdk/python/examples/: async_streaming.py  hello_world.py
sdk/python/scripts/: generate.ps1  generate.sh
sdk/python/src/cordum_sdk/: __init__.py  _namespaces.py  _retry.py  auth.py  client.py  errors.py  pagination.py  streaming.py
sdk/python/src/cordum_sdk/_generated/: __init__.py  client.py  types.py
sdk/python/src/cordum_sdk/_generated/models/: __init__.py  admin_lock.py  api_key_info.py  approval_analytics_group.py  approval_analytics_response.py  approval_analytics_response_window.py  approval_analytics_summary.py  approval_decision_request.py  approval_item.py  approval_item_constraints_type_0.py  approval_item_decision.py  approve_mcp_approval_response_200.py  artifact_detail.py  artifact_detail_metadata.py  artifact_detail_metadata_labels.py  audit_event.py  audit_event_extra.py  audit_events_envelope.py  audit_verify_gap.py  audit_verify_gap_type.py  audit_verify_result.py  audit_verify_result_status.py  auth_config.py  auth_config_oidc_group_role_mapping.py  auth_config_oidc_group_role_mapping_additional_property.py  auth_source.py  auth_user.py  binary_verify_event.py  binary_verify_event_event.py  binary_verify_event_sig_scheme.py  binary_verify_events_envelope.py  (+450 more)
sdk/python/tests/: test_auth.py  test_client.py  test_errors.py  test_examples_smoke.py  test_generated_coverage.py  test_pagination.py  test_retry.py  test_streaming.py
sdk/python/tests/integration/: __init__.py  conftest.py  test_auth_flows_e2e.py  test_crud_e2e.py  test_errors_e2e.py  test_retry_e2e.py
(+2879 files in other folders)
